# Flying-Robot-Control

./: .gitignore  0669.py  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt  test_system.py
config/: quadrotor.yaml
demo/: app.py
scripts/: run_simulation.py
src/: __init__.py
src/controllers/: __init__.py  geometric.py  lqr.py  mpc.py  pid.py
src/dynamics/: __init__.py  parameters.py  quadrotor.py
src/utils/: __init__.py  math_utils.py  visualization.py
tests/: test_controllers.py  test_dynamics.py  test_utils.py
