[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flying-robot-control"
version = "1.0.0"
description = "Modern flying robot control framework with advanced control algorithms"
authors = [
    {name = "Robotics Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "casadi>=3.6.0",
    "pybullet>=3.2.5",
    "gymnasium>=0.29.0",
    "pinocchio>=2.6.0",
    "spatialmath-python>=1.0.0",
    "numpy-quaternion>=0.1.0",
    "filterpy>=1.4.5",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
ros2 = [
    "rclpy>=3.3.0",
    "tf2-py>=0.25.0",
    "geometry-msgs>=4.2.0",
    "sensor-msgs>=4.2.0",
    "nav-msgs>=4.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
flying-robot-sim = "scripts.run_simulation:main"
flying-robot-demo = "demo.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "demo*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "simulation: marks tests that require simulation environment",
]
